# ai-photo-cull

./: README.md  pyproject.toml
ai_photo_cull/: ai-cull.py  cli.py  core.py  install_ai_photo_cull.sh  scoring_profiles.py
ai_photo_cull/utils/: html_report.py  image_loader.py  metadata.py  metrics.py
