[project]
name = "ai-photo-cull"
version = "0.1.0"
description = "Local AI-assisted photo culling tool with ON1 metadata support"
authors = [
    { name = "David Mackie" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

dependencies = [
    "rawpy",
    "opencv-python",
    "numpy",
    "pillow",
    "onnxruntime-silicon",
]

[project.scripts]
ai-photo-cull = "ai_photo_cull.cli:main"
